--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -71,19 +71,28 @@
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Button Content="показать свободные"  Grid.Column="1" Grid.Row="0" Margin="0, 15, 0, 15"/>
                 <Label Content="с" Grid.Column="0" Grid.Row="1" Margin="12 0 0 0"/>
-                <DatePicker Grid.Column="1" Grid.Row="1" Margin="0 0 0 40"/>
+                <DatePicker Grid.Column="1" Grid.Row="1" Margin="0 0 0 30"/>
                 <Label Content="по" Grid.Column="0" Grid.Row="1" Margin="5 35 0 0" Grid.RowSpan="2"/>
-                <DatePicker Grid.Column="1" Grid.Row="1" Margin="0 37 0 75" Grid.RowSpan="2"/>
+                <DatePicker Grid.Column="1" Grid.Row="1" Margin="0 37 0 160" Grid.RowSpan="4"/>
 
-                <Button x:Name="AddNewButton" Content="Инсертнуть" Grid.Column="1" Grid.Row="2" Margin="0, 30, 0, 0"/>
-                <Button x:Name="EditButton" Content="Редактировать" Grid.Column="1" Grid.Row="4"
-                        Margin="0, 15, 0, 15" Command="{Binding MiniOfficeVM.ChangeMiniOfficeEditVisibility}"/>
-                <Button x:Name="AddToOrderButton" Content="Добавить к заказу" Grid.Column="1" Grid.Row="5" Margin="0, 15, 0, 15"/>
-                <Button x:Name="DeleteButton" Content="Удалить" Grid.Column="1" Grid.Row="6"
-                        Margin="0, 15, 0, 15"/>
+                <Button x:Name="MiniOfficeEditButton" Content="Миниофисы" Grid.Column="1" Grid.Row="3"
+                        Margin="0, 0, 0, 30" Command="{Binding MiniOfficeVM.ChangeMiniOfficeEditVisibility}"/>
+                <Button x:Name="PlaceEditButton" Content="Места" Grid.Column="1" Grid.Row="4"
+                        Margin="0, 0, 0, 30"/>
+                <Button x:Name="ConferenceRoomEditButton" Content="Конференц-залы" Grid.Column="1" Grid.Row="5"
+                        Margin="0, 0, 0, 30"/>
+                <Button x:Name="MeetingRoomEditButton" Content="Переговорные" Grid.Column="1" Grid.Row="6"
+                        Margin="0, 0, 0, 30"/>
+                <Button x:Name="ComputersEditButton" Content="Компьютеры" Grid.Column="1" Grid.Row="7"
+                        Margin="0, 0, 0, 30"/>
+                <Button x:Name="AddToOrderButton" Content="Добавить к заказу" Grid.Column="1" Grid.Row="8"
+                        Grid.RowSpan="2" Margin="0, 35, 0, 30"/>
+
             </Grid>
             <Grid x:Name="MainBookingGrid" Grid.Column ="0" Background="DarkGray" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
@@ -108,7 +117,7 @@
                 <Label Content="Компьютеры" HorizontalAlignment="Center" Grid.Column="2" Grid.Row="0" FontFamily="Arial Black"/>
 
                 <DataGrid x:Name="MiniOffices" AutoGenerateColumns="False" Margin="2 0 2 0" Grid.Column="0" Grid.Row="1" CanUserAddRows="False" 
-                      ItemsSource="{Binding MiniOffices}" SelectedItem="{Binding Path=BookingSelectedItem, Mode=TwoWay}" ColumnWidth="*" CanUserDeleteRows="False">
+                      ItemsSource="{Binding MiniOffices}" SelectedItem="{Binding Path=MiniOfficeVM.SelectedMiniOffice, Mode=TwoWay}" ColumnWidth="*" CanUserDeleteRows="False">
                     <DataGrid.Resources>
                         <Style TargetType="{x:Type DataGridColumnHeader}">
                             <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -121,7 +130,18 @@
                         <DataGridTextColumn Header="Описание"  Width="auto" Binding="{Binding Name}"/>
                         <DataGridTextColumn Header="Цена за день"  Width="auto" Binding="{Binding PricePerDay}"/>
                         <DataGridTextColumn Header="Кол-во мест"  Width="auto" Binding="{Binding AmountOfPlaces}"/>
+                        <DataGridTemplateColumn Header="Изменить" Width="auto">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Button Content="Преобразовать в места" />
+                                        <Button Content="Сделать переговорной" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
                     </DataGrid.Columns>
+
                 </DataGrid>
 
                 <DataGrid x:Name="Places" AutoGenerateColumns="False" Grid.Column="1" Margin="2 0 2 0" Grid.Row="1" CanUserAddRows="False" Grid.RowSpan="5"
@@ -193,7 +213,7 @@
                         <DataGridTextColumn Header="Цена/месяц"  Width="auto" Binding="{Binding PricePerMonth}"/>
                     </DataGrid.Columns>
                 </DataGrid>
-                <Grid x:Name="AddMiniOfficeGrid" Visibility="{Binding MiniOfficeVM.GridVisibility}" Grid.Column ="3" Grid.RowSpan="6"
+                <Grid x:Name="EditMiniOfficeGrid" Visibility="{Binding MiniOfficeVM.GridVisibility}" Grid.Column ="3" Grid.RowSpan="6"
                       Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <Grid.Effect>
                         <DropShadowEffect Color="Black" ShadowDepth="0.01"/>
@@ -207,9 +227,29 @@
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Button x:Name="AddFinallyMiniOfficeButton" Command="{Binding ChangeMiniOfficeEditVisibility}" CommandParameter="{Binding MiniOfficeVM}"
-                            Content="Добавить оплату" Grid.Column="0" Grid.Row="6" Margin="15, 0, 15, 30"/>
+                    <Label Content="Миниофисы" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
+                    <Label Content="Описание" Grid.Row="1" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="Name"  Grid.Row="1" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.Name}"/>
+                    <Label Content="Цена в день" Grid.Row="2" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PricePerDay"  Grid.Row="2" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PricePerDay}"/>
+                    <Label Content="Вместимость/чел" Grid.Row="3" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="AmountOfPlaces" Grid.Row="3" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.AmountOfPlaces}"/>
+                    <Label Content="Цена в день за место" Grid.Row="4" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PlacePricePerDay" Grid.Row="4" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlacePricePerDay}"/>
+                    <Label Content="Фикс цена/день за место" Grid.Row="5" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PlacePriceFixedPerDay" Grid.Row="5" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlacePriceFixedPerDay}"/>
+                    <Label Content="Номер 1-го из мест" Grid.Row="6" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PlaceNumber" Grid.Row="6" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlaceNumber}"/>
+
+                    <Button x:Name="AddMiniOfficeButton" IsEnabled="{Binding MiniOfficeVM.IsAddButtonAvailable}" Command="{Binding MiniOfficeVM.AddMiniOffice}"
+                            Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 10, 15, 20"/>
+                    <Button x:Name="EditFinallyMiniOfficeButton" Command="{Binding MiniOfficeVM.EditMiniOffice}" CommandParameter="{Binding MiniOfficeVM}"
+                            Content="Редактировать" Grid.Column="0" Grid.Row="8" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsEditButtonAvailable}"/>
+                    <Button x:Name="DeleteMiniOfficeButton" Command="{Binding MiniOfficeVM.DeleteMiniOffice}" Content="Удалить" Grid.Column="0"
+                            Grid.Row="9" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsDeleteButtonAvailable}"/>
                 </Grid>
             </Grid>
         </Grid>
@@ -222,7 +262,7 @@
             <Label>Text in client grid</Label>
         </Grid>
 
-        <Grid x:Name="OrderGrid" Grid.Column ="1" Visibility="{Binding GridVisibility}" DataContext="{Binding Order}">
+        <Grid x:Name="OrderGrid" Grid.Column ="1" Visibility="Hidden" DataContext="{Binding Order}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75*"/>
                 <ColumnDefinition Width="25*"/>
@@ -246,7 +286,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-              
+
                 <Button x:Name="AddPaymentButton" IsEnabled="{Binding AreButtonsAvailable}" Command="{Binding Payment.ChangePaymentVisibility}" Content="Добавить оплату" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0"/>
                 <Label Visibility="{Binding IsToolTipOn}" Grid.Column="1" Grid.Row="1" Margin="0, 30, 0, 0">
                     <Label.ToolTip>
@@ -287,7 +327,7 @@
                     <Label Name="AmountLabel" Grid.Row="1" Grid.Column="1" Content="Введите сумму платежа:" Margin="2, 35, 2, 0"/>
                     <TextBox x:Name="AmountTextBox" Grid.Row="2" Grid.Column="1" Text ="{Binding Payment.Amount}" Margin="15, 15, 15, 15"/>
                     <Label Name="DateLabel" Grid.Row="3" Grid.Column="1" Content="Выберите дату:" Margin="2, 35, 2, 0"/>
-                    <DatePicker x:Name="PaymentDatePicker" Grid.Row="4" Grid.Column="1" SelectedDate ="{Binding Payment.PaymentDate}" Margin="15, 15, 15, 15"/> 
+                    <DatePicker x:Name="PaymentDatePicker" Grid.Row="4" Grid.Column="1" SelectedDate ="{Binding Payment.PaymentDate}" Margin="15, 15, 15, 15"/>
                     <Button x:Name="AddFinallyPaymentButton" IsEnabled="{Binding Payment.IsAddPaymentButtonAvailable}"  Command="{Binding Payment.ChangePaymentVisibility}" Content="Добавить оплату" Grid.Column="1" Grid.Row="6" Margin="15, 0, 15, 30"/>
                 </Grid>
             </Grid>
