--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -83,7 +83,7 @@
                 <Button x:Name="MiniOfficeEditButton" Content="Миниофисы" Grid.Column="1" Grid.Row="3"
                         Margin="0, 0, 0, 30" Command="{Binding MiniOfficeVM.ChangeMiniOfficeEditVisibility}"/>
                 <Button x:Name="PlaceEditButton" Content="Места" Grid.Column="1" Grid.Row="4"
-                        Margin="0, 0, 0, 30"/>
+                        Margin="0, 0, 0, 30" Command="{Binding PlaceVM.ChangePlaceEditVisibility}"/>
                 <Button x:Name="ConferenceRoomEditButton" Content="Конференц-залы" Grid.Column="1" Grid.Row="5"
                         Margin="0, 0, 0, 30"/>
                 <Button x:Name="MeetingRoomEditButton" Content="Переговорные" Grid.Column="1" Grid.Row="6"
@@ -145,7 +145,7 @@
                 </DataGrid>
 
                 <DataGrid x:Name="Places" AutoGenerateColumns="False" Grid.Column="1" Margin="2 0 2 0" Grid.Row="1" CanUserAddRows="False" Grid.RowSpan="5"
-                      ItemsSource="{Binding Places}" SelectedItem="{Binding Path=BookingSelectedItem, Mode=TwoWay}" ColumnWidth="*" CanUserDeleteRows="False">
+                      ItemsSource="{Binding Places}" SelectedItem="{Binding Path=PlaceVM.SelectedPlace, Mode=TwoWay}" ColumnWidth="*" CanUserDeleteRows="False">
                     <DataGrid.Resources>
                         <Style TargetType="{x:Type DataGridColumnHeader}">
                             <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -249,6 +249,40 @@
                     <Button x:Name="EditFinallyMiniOfficeButton" Command="{Binding MiniOfficeVM.EditMiniOffice}" CommandParameter="{Binding MiniOfficeVM}"
                             Content="Редактировать" Grid.Column="0" Grid.Row="8" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsEditButtonAvailable}"/>
                     <Button x:Name="DeleteMiniOfficeButton" Command="{Binding MiniOfficeVM.DeleteMiniOffice}" Content="Удалить" Grid.Column="0"
+                            Grid.Row="9" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsDeleteButtonAvailable}"/>
+                </Grid>
+                <Grid x:Name="EditPlaceGrid" Visibility="{Binding PlaceVM.GridVisibility}" Grid.Column ="3" Grid.RowSpan="6"
+                      Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <Grid.Effect>
+                        <DropShadowEffect Color="Black" ShadowDepth="0.01"/>
+                    </Grid.Effect>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Label Content="Места" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
+                    <Label Content="Описание" Grid.Row="1" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="description"  Grid.Row="1" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.Name}"/>
+                    <Label Content="Цена в день" Grid.Row="2" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="pricePerDay"  Grid.Row="2" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PricePerDay}"/>
+                    <Label Content="Фикс цена в день" Grid.Row="5" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PriceFixedPerDay" Grid.Row="5" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlacePriceFixedPerDay}"/>
+                    <Label Content="Номер места" Grid.Row="6" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="Number" Grid.Row="6" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlaceNumber}"/>
+
+                    <Button x:Name="AddPlaceButton" IsEnabled="{Binding MiniOfficeVM.IsAddButtonAvailable}" Command="{Binding MiniOfficeVM.AddMiniOffice}"
+                            Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 10, 15, 20"/>
+                    <Button x:Name="EditPlaceButton" Command="{Binding MiniOfficeVM.EditMiniOffice}" CommandParameter="{Binding MiniOfficeVM}"
+                            Content="Редактировать" Grid.Column="0" Grid.Row="8" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsEditButtonAvailable}"/>
+                    <Button x:Name="DeletePlaceButton" Command="{Binding MiniOfficeVM.DeleteMiniOffice}" Content="Удалить" Grid.Column="0"
                             Grid.Row="9" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsDeleteButtonAvailable}"/>
                 </Grid>
             </Grid>
