--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -247,7 +247,7 @@
             </Grid>
         </Grid>
 
-        <Grid x:Name="ProductsGrid" Grid.Column ="1" DataContext="{Binding Product}" Visibility="Hidden">
+        <Grid x:Name="ProductsGrid" Grid.Column ="1" DataContext="{Binding Product}" Visibility="{Binding GridVisibility}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75*"/>
                 <ColumnDefinition Width="25*"/>
