--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -272,7 +272,7 @@
                 <StackPanel x:Name="ProductPanelChekBox" Grid.Column="1" Grid.Row="2"  Margin="0,0,0,20">
                     <CheckBox Content="Товары в наличии" Margin="0, 5, 0, 0" />
                 </StackPanel>
-                <Button x:Name="EditProductButton" IsEnabled ="{Binding EditProductViewModel.IsEditButtonAvailable}" Command="{Binding EditProductViewModel.ChangeProductVisibility}" Content="Редактировать" Grid.Column="1" Grid.Row="3" Margin="0, 0, 0, 50"/>
+                <Button x:Name="EditProductButton" IsEnabled ="{Binding IsEditButtonAvailable}" Command="{Binding EditProductViewModel.ChangeProductVisibility}" CommandParameter="{Binding EditProductViewModel.FillProductFields}" Content="Редактировать" Grid.Column="1" Grid.Row="3" Margin="0, 0, 0, 50"/>
                 <Button x:Name="AddToProductOrderButton" Content="Добавить к заказу" Grid.Column="1" Grid.Row="4" Margin="0, 45, 0, 0"/>
             </Grid>
             <Grid x:Name ="MainProductGrid" Grid.Column ="0" Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -318,13 +318,13 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Label Name="ProductEditNameLabel" Grid.Row="2" Grid.Column ="1" Content="Введите товар:" Margin="15,0,0,0" />
-                    <TextBox x:Name ="ProductEditName" Grid.Row ="2" Grid.Column ="1" Margin="15,25,15,0" Style="{StaticResource placeHolder}" Tag="Введите товар" Text="{Binding EditProductViewModel.Name}"/>
+                    <TextBox x:Name ="ProductEditName" Grid.Row ="2" Grid.Column ="1" Margin="15,25,15,0"  Text="{Binding EditProductViewModel.Name}"/>
                     <Label Name="ProductEditPriceLabel" Grid.Row="3" Grid.Column ="1" Content="Введите цену:" Margin="15,0,0,0" />
-                    <TextBox x:Name ="ProductEditPrice" Grid.Row ="3" Grid.Column ="1" Margin="15,25,15,0" Style="{StaticResource placeHolder}" Tag="Введите цену" Text="{Binding EditProductViewModel.PriceForOne}"/>
+                    <TextBox x:Name ="ProductEditPrice" Grid.Row ="3" Grid.Column ="1" Margin="15,25,15,0"  Text="{Binding EditProductViewModel.PriceForOne}"/>
                     <Label Name="ProductEditAmountLabel" Grid.Row="4" Grid.Column ="1" Content="Введите количество:" Margin="15,0,0,0" />
-                    <TextBox x:Name ="ProductEditAmount" Grid.Row ="4" Grid.Column ="1" Margin="15,25,15,0" Style="{StaticResource placeHolder}" Tag="Введите количество" Text="{Binding EditProductViewModel.Amount}"/>
+                    <TextBox x:Name ="ProductEditAmount" Grid.Row ="4" Grid.Column ="1" Margin="15,25,15,0"  Text="{Binding EditProductViewModel.Amount}"/>
                     <Label Name="ProductEditDescriptionLabel" Grid.Row="5" Grid.Column ="1" Content="Введите описание:" Margin="15,0,0,0" />
-                    <TextBox x:Name ="ProductEditDescription" Grid.Row ="5" Grid.Column ="1" Margin="15,25,15,0" Style="{StaticResource placeHolder}" Tag="Введите описание" Text="{Binding EditProductViewModel.Description}"/>
+                    <TextBox x:Name ="ProductEditDescription" Grid.Row ="5" Grid.Column ="1" Margin="15,25,15,0"  Text="{Binding EditProductViewModel.Description}"/>
                     <Button x:Name ="EditFinallyProduct" Content="Сохранить" Grid.Row="7" Margin="15" Command="{Binding EditProduct}" />
                 </Grid>
             </Grid>
