--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -270,13 +270,13 @@
                     </Grid.RowDefinitions>
                     <Label Content="Места" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
                     <Label Content="Описание" Grid.Row="1" Margin="5 0 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="description"  Grid.Row="1" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.Name}"/>
+                    <TextBox x:Name="description"  Grid.Row="1" Margin="10, 30, 10, 0" Text ="{Binding PlaceVM.Description}"/>
                     <Label Content="Цена в день" Grid.Row="2" Margin="5 0 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="pricePerDay"  Grid.Row="2" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PricePerDay}"/>
-                    <Label Content="Фикс цена в день" Grid.Row="5" Margin="5 0 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="PriceFixedPerDay" Grid.Row="5" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlacePriceFixedPerDay}"/>
-                    <Label Content="Номер места" Grid.Row="6" Margin="5 0 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="Number" Grid.Row="6" Margin="10, 30, 10, 0" Text ="{Binding MiniOfficeVM.PlaceNumber}"/>
+                    <TextBox x:Name="pricePerDay"  Grid.Row="2" Margin="10, 30, 10, 0" Text ="{Binding PlaceVM.PricePerDay}"/>
+                    <Label Content="Фикс цена в день" Grid.Row="3" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="PriceFixedPerDay" Grid.Row="3" Margin="10, 30, 10, 0" Text ="{Binding PlaceVM.PriceFixedPerDay}"/>
+                    <Label Content="Номер места" Grid.Row="4" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="Number" Grid.Row="4" Margin="10, 30, 10, 0" Text ="{Binding PlaceVM.Number}"/>
 
                     <Button x:Name="AddPlaceButton" IsEnabled="{Binding MiniOfficeVM.IsAddButtonAvailable}" Command="{Binding MiniOfficeVM.AddMiniOffice}"
                             Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 10, 15, 20"/>
