--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -282,7 +282,7 @@
                             Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 10, 15, 20"/>
                     <Button x:Name="EditPlaceButton" Command="{Binding PlaceVM.EditPlace}" Content="Редактировать" Grid.Column="0"
                             Grid.Row="8" Margin="15, 10, 15, 20" IsEnabled="{Binding PlaceVM.IsEditButtonAvailable}"/>
-                    <Button x:Name="DeletePlaceButton" Command="{Binding PlaceVM.DeleteMiniOffice}" Content="Удалить" Grid.Column="0"
+                    <Button x:Name="DeletePlaceButton" Command="{Binding PlaceVM.DeletePlace}" Content="Удалить" Grid.Column="0"
                             Grid.Row="9" Margin="15, 10, 15, 20" IsEnabled="{Binding PlaceVM.IsDeleteButtonAvailable}"/>
                 </Grid>
             </Grid>
@@ -296,7 +296,7 @@
             <Label>Text in client grid</Label>
         </Grid>
 
-        <Grid x:Name="OrderGrid" Grid.Column ="1" Visibility="Hidden" DataContext="{Binding Order}">
+        <Grid x:Name="OrderGrid" Grid.Column ="1" Visibility="{Binding GridVisibility}" DataContext="{Binding Order}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="75*"/>
                 <ColumnDefinition Width="25*"/>
