--- a/CoCoworkView/MainWindow.xaml
+++ b/CoCoworkView/MainWindow.xaml
@@ -197,7 +197,7 @@
                 </DataGrid>
 
                 <DataGrid x:Name="Computers" AutoGenerateColumns="False" Margin="0 0 0 0" Width="auto" Grid.Column="2" Grid.Row="1" CanUserAddRows="False" Grid.RowSpan="5"
-                      ItemsSource="{Binding Laptops}" SelectedItem="{Binding Path=BookingSelectedItem, Mode=TwoWay}" ColumnWidth="*" CanUserDeleteRows="False">
+                      ItemsSource="{Binding Laptops}" SelectedItem="{Binding Path=LaptopVM.SelectedLaptop, Mode=TwoWay}" ColumnWidth="*" CanUserDeleteRows="False">
                     <DataGrid.Resources>
                         <Style TargetType="{x:Type DataGridColumnHeader}">
                             <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -251,6 +251,7 @@
                     <Button x:Name="DeleteMiniOfficeButton" Command="{Binding MiniOfficeVM.DeleteMiniOffice}" Content="Удалить" Grid.Column="0"
                             Grid.Row="9" Margin="15, 10, 15, 20" IsEnabled="{Binding MiniOfficeVM.IsDeleteButtonAvailable}"/>
                 </Grid>
+                
                 <Grid x:Name="EditPlaceGrid" Visibility="{Binding PlaceVM.GridVisibility}" Grid.Column ="3" Grid.RowSpan="6"
                       Background="#FFE0DFDF" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <Grid.Effect>
@@ -303,18 +304,20 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <Label Content="Места" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
-                    <Label Content="Описание" Grid.Row="1" Margin="5 0 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="descriptionLaptop"  Grid.Row="1" Margin="10, 30, 10, 0" Text ="{Binding LaptopVM.Description}"/>
-                    <Label Content="Цена в день" Grid.Row="2" Margin="5 0 5 0" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="pricePerMonth"  Grid.Row="2" Margin="10, 30, 10, 0" Text ="{Binding LaptopVM.PricePerMonth}"/>
+                    <Label Content="Компьютеры" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Margin="0 20 0 0" FontWeight="Bold" FontFamily="Academy Engraved LET Plain"/>
+                    <Label Content="Описание" Grid.Row="2" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="descriptionLaptop"  Grid.Row="2" Margin="10, 30, 10, 0" Text ="{Binding LaptopVM.Description}"/>
+                    <Label Content="Цена в месяц" Grid.Row="3" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="pricePerMonth"  Grid.Row="3" Margin="10, 30, 10, 0" Text ="{Binding LaptopVM.PricePerMonth}"/>
                     <Label Content="Номер компьютера" Grid.Row="4" Margin="5 0 5 0" HorizontalAlignment="Center"/>
                     <TextBox x:Name="NumberOfLaptop" Grid.Row="4" Margin="10, 30, 10, 0" Text ="{Binding LaptopVM.Number}"/>
+                    <Label Content="Наименование" Grid.Row="1" Margin="5 0 5 0" HorizontalAlignment="Center"/>
+                    <TextBox x:Name="NameOfPC"  Grid.Row="1" Margin="10, 30, 10, 0" Text ="{Binding LaptopVM.Name}"/>
 
-                    <Button x:Name="AddLaptopButton" IsEnabled="{Binding LaptopVM.IsAddButtonAvailable}" Command="{Binding PlaceVM.AddLaptop}"
+                    <Button x:Name="AddLaptopButton" IsEnabled="{Binding LaptopVM.IsAddButtonAvailable}" Command="{Binding LaptopVM.AddLaptop}"
                             Content="Добавить" Grid.Column="0" Grid.Row="7" Margin="15, 10, 15, 20"/>
                     <Button x:Name="EditLaptopButton" Command="{Binding LaptopVM.EditLaptop}" Content="Редактировать" Grid.Column="0"
-                            Grid.Row="8" Margin="15, 10, 15, 20" IsEnabled="{Binding PlaceVM.IsEditButtonAvailable}"/>
+                            Grid.Row="8" Margin="15, 10, 15, 20" IsEnabled="{Binding LaptopVM.IsEditButtonAvailable}"/>
                     <Button x:Name="DeleteLaptopButton" Command="{Binding LaptopVM.DeleteLaptop}" Content="Удалить" Grid.Column="0"
                             Grid.Row="9" Margin="15, 10, 15, 20" IsEnabled="{Binding LaptopVM.IsDeleteButtonAvailable}"/>
                 </Grid>
